--- a/install.html
+++ b/install.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2024-08-04 Sun 14:15 -->
+<!-- 2024-08-04 Sun 15:24 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>&lrm;</title>
@@ -199,35 +199,39 @@
 <h2>Table of Contents</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org24f81ac">1. Installing themes</a></li>
+<li><a href="#org92ab536">1. Installing themes</a></li>
 </ul>
 </div>
 </div>
-<div id="outline-container-org24f81ac" class="outline-2">
-<h2 id="org24f81ac"><span class="section-number-2">1.</span> Installing themes</h2>
+<div id="outline-container-org92ab536" class="outline-2">
+<h2 id="org92ab536"><span class="section-number-2">1.</span> Installing themes</h2>
 <div class="outline-text-2" id="text-1">
 <p class="verse">
 1. Clone this repository and change to its directory:<br />
-&#xa0;&#xa0;&#xa0;&#xa0;git clone <a href="https://github.com/jiuhao2019/rofi_theme.git">https://github.com/jiuhao2019/rofi_theme.git</a><br />
-&#xa0;&#xa0;&#xa0;&#xa0;cd rofi-theme<br />
+<br />
+&#xa0;&#xa0;&#xa0;git clone <a href="https://github.com/jiuhao2019/rofi_theme.git">https://github.com/jiuhao2019/rofi_theme.git</a><br />
+&#xa0;&#xa0;&#xa0;cd rofi-theme<br />
 <br />
 2. If you don't have the directories needed for the install create them with:<br />
-mkdir -p ~/.local/share/rofi/themes/<br />
+<br />
+&#xa0;&#xa0;&#xa0;mkdir -p ~/.local/share/rofi/themes/<br />
 <br />
 3. Copy your desired theme to `~/.local/share/rofi/themes` folder:<br />
-cp themes/&lt;your-selected-theme&gt; ~/.local/share/rofi/themes/<br />
+<br />
+&#xa0;&#xa0;&#xa0;cp themes/&lt;your-selected-theme&gt; ~/.local/share/rofi/themes/<br />
 <br />
 4. Run Rofi in `run` mode, then run `rofi-theme-selector`.<br />
 <br />
 5. Search for your desired theme, press `enter` to preview, then `Alt+a` to accept the new theme.<br />
 <br />
 6. Enjoy your new Rofi theme!<br />
+7<br />
 </p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
-<p class="date">Created: 2024-08-04 Sun 14:15</p>
+<p class="date">Created: 2024-08-04 Sun 15:24</p>
 <p class="validation"><a href="https://validator.w3.org/check?uri=referer">Validate</a></p>
 </div>
 </body>
